feat: added wrapper classes for TariTransactionKernel
Update libwallet version

Update jniWallet.cpp to latest interface

Update FFIWallet.kt to reflect changes in jniWallet.cpp

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -65,6 +65,7 @@ add_library(
         jniContact.cpp
         jniCommsConfig.cpp
         jniCompletedTransaction.cpp
+        jniCompletedTransactionKernel.cpp
         jniPendingInboundTransaction.cpp
         jniPendingOutboundTransaction.cpp
         jniCollections.cpp
