--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     ext.versionNumber = "0.6.7"
 
     // JNI libs
-    ext.libwalletVersion = "0.17.3_network"
+    ext.libwalletVersion = "0.17.6"
     ext.libwalletHostURL = "https://tari-binaries.s3.amazonaws.com/libwallet/"
     ext.supportedABIs = ["arm64-v8a", "armeabi-v7a", "x86_64"]
 
